--- a/virt/05-virt-03/docker2/Dockerfile
+++ b/virt/05-virt-03/docker2/Dockerfile
@@ -9,12 +9,12 @@ sudo python3 py3-pip openssl ca-certificates sshpass openssh-client rsync git &&
      pip install --upgrade pip wheel && \
      pip install --upgrade cryptography cffi && \
      pip install ansible==2.9.24 && \
-     pip install mitogen ansible-lint jmespath && \
+     pip install --ignore-installed mitogen ansible-lint jmespath && \
      pip install --upgrade pywinrm && \
      apk del build-dependencies && \
      rm -rf /var/cache/apk/* && \
-     rm -rf /root/.cache/pip 
-#     rm -rf /root/.cargo
+     rm -rf /root/.cache/pip && \
+     rm -rf /root/.cargo
 
 RUN  mkdir /ansible && \
      mkdir -p /etc/ansible && \
