--- a/terraform/03/src/hosts.cfg
+++ b/terraform/03/src/hosts.cfg
@@ -1,8 +1,8 @@
 [count_servers]
 
-netology-develop-platform-web-0   ansible_host=  try (        158.160.100.60,  10.0.1.26        )
-netology-develop-platform-web-1   ansible_host=  try (        158.160.99.81,  10.0.1.15        )
+netology-develop-platform-web-0   ansible_host=158.160.47.241
+netology-develop-platform-web-1   ansible_host=158.160.48.220
 [for_each_servers]
 
-vm1   ansible_host=  try(158.160.39.216,  10.0.1.17)
-vm2   ansible_host=  try(158.160.99.48,  10.0.1.19)   
+vm1   ansible_host=158.160.41.226
+vm2   ansible_host=158.160.101.160   
